--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^8.1.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
